Updates based on FindBugs recommendations.