@@ -209,7 +209,7 @@ public class MpxjCreate
       // output file format when alternative separators and delimiters
       // are used.
       //
-      resource2.setMaxUnits(new Double(50.0));
+      resource2.setMaxUnits(Double.valueOf(50.0));
 
       //
       // Create a summary task
